docs: update .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,14 @@
-## TOKEN=""
-## RCON_IP=""
-## RCON_PORT=""
-## RCON_PASSWORD=""
-## WHITELIST_ROLE_ID=""     (optional)
+# ---------------------------------------------------------------------------
+# This template contains only required options.
+# ---------------------------------------------------------------------------
+
+TOKEN="your_discord_bot_token"
+RCON_IP="127.0.0.1"
+RCON_PORT="25575"
+RCON_PASSWORD="your_minecraft_server_rcon_password"
+
+# ---------------------------------------------------------------------------
+# Optionally available options:
+# ---------------------------------------------------------------------------
+
+# WHITELIST_ROLE_ID="whitelisted_role_id"
